Corrigindo a utilização da exception EntityNotFoundException para a versão 3.3.5 do springboot do projecto